# vita

./: .gitignore  CMakeLists.txt  README.md
impl/: CMakeLists.txt
impl/excercises/: exercise_4.1-3_unittest.cpp  exercise_4.1-to-3_impl.h  exercise_4_1_1_unittest.cpp
impl/utility/: performance_meter.h  std_chrono_toolbox.h
public/excercises/: exercise_4.1-3.h
tools/cmake_modules/: github.cmake  gmock.cmake
